# palworld-server-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml
bridge/data/: ATTRIBUTION.md  fast_travel_ids.json  pal_stats.json
bridge/psm-bridge/: Cargo.toml
bridge/psm-bridge/src/: config.rs  gui.rs  lib.rs  main.rs  runtime.rs  server.rs  settings_ini.rs  state.rs  supervisor.rs  time_skip.rs
bridge/psm-bridge/tests/: api_debug.rs  api_health.rs  api_read.rs  api_write.rs  cache.rs  smoke.rs  supervisor.rs
bridge/src/: lib.rs
bridge/src/save/: base_camp.rs  character.rs  containers.rs  debug.rs  decompress.rs  guild.rs  gvas.rs  map_object.rs  mod.rs  model.rs  props.rs  reader.rs  reference.rs
bridge/src/save/edit/: enc.rs  locate.rs  mod.rs  ops.rs  plan.rs  write.rs
bridge/tests/: cli_dump.rs  debug_dump.rs  decode_world1.rs  decode_world2.rs  decompress.rs  edit_ops.rs  edit_pal_ops.rs  gvas.rs  hardening.rs  model_serde.rs  reader.rs  reference.rs  smoke.rs
docs/: UPDATER-SETUP.md  social-platform-integration-research.md
scripts/: gen-exp-table.mjs  gen-item-data.mjs  gen-item-meta.mjs  gen-pal-atlas.mjs  gen-pal-combat.mjs  gen-pal-dex.mjs  gen-pal-names.mjs  gen-pal-stats.mjs  gen-skill-meta.mjs  gen-tech-data.mjs  sync-pal-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  bridge.rs  commands.rs  lib.rs  main.rs
src/api/: bridge.ts  fixtures.ts  http.ts  index.ts  mock.test.ts  mock.ts  tauri.ts
src/components/: Button.tsx  ConfirmDialog.tsx  DataTable.tsx  Drawer.tsx  EmptyState.tsx  ErrorBoundary.tsx  Field.tsx  Gauge.tsx  ItemIcon.tsx  MetricTile.tsx  MetricsRecorder.tsx  PalIcon.tsx  Radar.tsx  Sidebar.tsx  Skeleton.tsx  Sparkline.tsx  StatusPill.tsx  TechIcon.tsx  TechTree.tsx  TimeSeriesChart.tsx  TopBar.tsx  UpdateBanner.tsx  WorldMapView.tsx
src/data/: expTable.json  itemAtlas.json  itemIcons.json  itemMeta.json  palAtlas.json  palDex.json  palIconKeys.json  palNames.json  palScaling.json  passiveEffects.json  skillMeta.json  techAtlas.json  techDex.json  techNames.json
src/hooks/: bridge.ts  (+2 more)
(+69 files in other folders)
