[package]
name = "palworld-server-manager"
version = "0.1.11"
description = "A modern desktop control panel for Palworld dedicated servers."
edition = "2021"
rust-version = "1.77"

[lib]
name = "palworld_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
