[package]
name = "psm-bridge"
version = "0.10.0"
edition = "2021"
publish = false

[dependencies]
psm-save = { path = ".." }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
